--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ function makeSelect(name, minRange, maxRange)
 <div>
 <p>First Name: <input type="text"  name='fname' /></p>
 <p>Last Name*:  <input type="text"  name='lname' /></p>
-<p id="street">Street: <input type="text"  name='street' /></p>
-<p id="city">City: <input type="text"  name='city' /></p>
+<p>Street: <input type="text"  name='street' /></p>
+<p>City: <input type="text"  name='city' /></p>
 <p>Phone*: <input type="text"  name='phone' /></p>
 <p>
 	<input type="radio"  name="p_or_d" value = "pickup" checked="checked"/>Pickup
